--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -21,6 +21,15 @@ h3, h4, h5{
 a, a:hover, a:visited {text-decoration: none;}
 img {border: none;}
 
+.center, .textcenter {text-align: center;}
+.left {	float: left; }
+.textleft {text-align: left;}
+
+.right { float: right; }
+.textright {text-align:right;}
+.clear {clear:both;}
+.block {display:block;}
+
 /** global end */
 /** main frame start */
 #wrap{}
@@ -39,6 +48,8 @@ img {border: none;}
 
 #nav{
 	margin-bottom: 16px;
+	font-size: 13px;
+	background: transparent url(../img/nav-bg.png) no-repeat 0px -1px;
 	position: relative;
 }
 
@@ -65,11 +76,37 @@ img {border: none;}
 }
 
 #menus{
-	//TODO
+	list-style: none;
+	display: block;
+	margin: 0;
+	padding: 0px;
+	float: left;
 }
 
 #menus li{
-	//TODO
+	font-weight: bold;
+	margin:0;
+	padding: 0px;
+	float: left;
+	background: url(../img/navdivider.png) no-repeat right top;
+}
+
+#menus li a{
+	padding: 9px 22px 9px 20px;
+	text-decoration: none;
+	text-shadow: #ddd 0px 1px 0px;
+	color: #000;
+	display: block;
+}
+
+#menus li a:hover{
+	color: #fff;
+	background: #b1b1b1 url(../img/nav-sprite-default.png) repeat-x 0 0px;
+}
+
+#menus li a:active{
+	color: #fff;
+	background: #2a2a2a url(../img/nav-sprite-default.png) repeat-x 0 -36px;
 }
 
 .post-wrap{
