--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -175,6 +175,7 @@ img {border: none;}
 
 .post-meta{
 	background: #eee;
+	border: 0px;
 	color: #000;
 	font-size: .9em;
 	font-style: normal;
@@ -218,7 +219,7 @@ img {border: none;}
 
 .post-tags li{
 	float: left;
-	color: #eee;
+	color: #ccc;
 	background: #fff;
 	padding: 2px 4px;
 	margin-right: 6px;
@@ -231,7 +232,7 @@ img {border: none;}
 
 .post-tags a {
 	font-weight: bold;
-	color: #aaa;
+	color: #ccc;
 	text-decoration: none;
 }
 
