--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -174,6 +174,7 @@ img {border: none;}
 .post-title{
 	font-size: 30px;
 	letter-spacing: -1px;
+	line-height: normal;
 	margin: 0 0 .45em;
 	color: #393939;
 	font-weight: 600;
