--- a/src/Theme/Laravel/css/style.css
+++ b/src/Theme/Laravel/css/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 h1, h2{
-	font-family: Myriad Pro, "Lucida Grande","Lucida Sans Unicode",Trebuchet MS,Helvetica,Arial;
+	font-family: "Myriad Pro", "Lucida Grande","Lucida Sans Unicode",Trebuchet MS,Helvetica,Arial;
 }
 
 h3, h4, h5{
@@ -28,6 +28,10 @@ img {border: none;}
 blockquote{margin:15px 0; border-left:4px solid #DDD;padding:0 15px;color:#777;}
 blockquote>:first-child{margin-top:0;}
 blockquote>:last-child{margin-bottom:0;}
+
+code, tt{margin:0 2px;padding:0 5px;white-space:nowrap;border:1px solid #eaeaea;background-color:#f8f8f8;border-radius:3px;}
+pre>code{margin:0;padding:0;white-space:pre;border:none;background:transparent;}
+pre code, pre tt{background-color:transparent;border:none;}
 
 .center, .textcenter {text-align: center;}
 .left {float: left;}
